<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:padding="8dp"
    tools:context=".fragments.add.AddFragment"
    >

    <TextView
        android:id="@+id/addTermNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_term"
        android:textColor="@color/secondary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/add_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/addTermNameTitle"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/editTermTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:text="@string/term"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            tools:text="acanthopore"/>

        <TextView
            android:id="@+id/editDefinitionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:text="@string/definition"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editDefinition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:breakStrategy="simple"
            android:maxWidth="600dp"
            tools:text="In cryptostomes, a type of stylet with a core which is a well-defined smooth rod of non-laminated calcite. Sheath lamellae usually strongly directed toward colony surface, sheath lamellar bundle wide. Transitional to paurostyle, but usually larger." />

        <TextView
            android:id="@+id/editLinksTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:text="@string/link"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            tools:text="style, another link" />

        <TextView
            android:id="@+id/editCitationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:text="@string/citation"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editCitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            tools:text="Blake 1983" />

        <TextView
            android:id="@+id/editFiguresTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:text="@string/figures"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editFigures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            tools:text="Adeonellopsis" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:minHeight="48dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/add_layout"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>